Fix flickering problem when clicking on some disabled buttons

--- a/mlflow/server/js/src/common/styles/patternfly/pf-shell-overrides.scss
+++ b/mlflow/server/js/src/common/styles/patternfly/pf-shell-overrides.scss
@@ -89,9 +89,9 @@
       }
     }
 
-    &:hover,
-    &:hover:active,
-    &:hover:focus {
+    &:hover:not(:disabled),
+    &:hover:active:not(:disabled),
+    &:hover:focus:not(:disabled) {
       color: var(--pf-t--global--text--color--brand--hover) !important;
       background: transparent !important;
       &::after {
@@ -186,7 +186,7 @@
     color: var(--pf-t--global--text--color--status--on-danger--default) !important;
     border-color: transparent !important;
 
-    &:hover {
+    &:hover:not(:disabled) {
       color: var(--pf-t--global--text--color--status--on-danger--hover) !important;
     }
 
